fix nav bar from collapsing in smaller window sizes

--- a/public/style.css
+++ b/public/style.css
@@ -2,20 +2,18 @@ html, body {
   margin: 0;
   padding: 0;
   width: 100vw;
-}
-
-.user-items {
-  margin-top: 12px;
+  overflow-x: hidden;
 }
 
 .vinyl {
-  float: left;
   margin-top: 10px;
 }
 
-.first {
+.user-info {
   font-size: 25px;
-  margin-right: 30px;
+  display: inline-flex;
+  justify-content: space-between;
+  padding: 10px;
 }
 
 .second {
@@ -61,3 +59,5 @@ h2 {
 nav.navbar {
   margin-bottom: 0;
 }
+
+
